--- a/app/src/main/res/layout/activity_upload_ticket.xml
+++ b/app/src/main/res/layout/activity_upload_ticket.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,16 +7,17 @@
     tools:context=".activities.UploadTicketActivity">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/profileIv"
-        android:src="@drawable/ic_camera"
-        app:civ_border_color="@color/app_color"
-        app:civ_border_width="2dp"
-        />
+    <!--    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:id="@+id/profileIv"
+            android:src="@drawable/ic_camera"
+            app:civ_border_color="@color/app_color"
+            app:civ_border_width="2dp"
+                    android:layout_below="@+id/profileIv"
+            />-->
 
     <!--Input Text for Notice-->
     <com.google.android.material.textfield.TextInputLayout
@@ -28,7 +28,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/profileIv"
+
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -48,11 +48,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/placeName"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_below="@+id/placeName"
-        >
+        android:layout_marginEnd="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ticketEt"
@@ -71,11 +70,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ticketName"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_below="@+id/ticketName"
-        >
+        android:layout_marginEnd="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phoneEt"
@@ -94,11 +92,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/vehicleNumber"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_below="@+id/vehicleNumber"
-        >
+        android:layout_marginEnd="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dateEt"
@@ -118,22 +115,21 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/journeyDate"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_below="@+id/journeyDate"
-        >
+        android:layout_marginEnd="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bioEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/zilla_slab_semi_bold"
+            android:gravity="start"
             android:hint="Short bio of journey"
             android:inputType="textCapSentences|textMultiLine"
-            android:textColor="@color/black"
             android:minHeight="100dp"
-            android:gravity="start"
+            android:textColor="@color/black"
 
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -143,12 +139,11 @@
         android:id="@+id/saveBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="10dp"
         android:layout_alignParentRight="true"
-        android:src="@drawable/ic_add"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_add" />
 
 
 </RelativeLayout>
