--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_ticket_manager"
-        android:icon="@drawable/ic_tickets"
-        android:title="Ticket Manager" />
+        android:icon="@drawable/ic_ticket"
+        android:title="Ticket Manager"
+        app:tint="@color/app_color"
+        />
 
     <item
         android:id="@+id/menu_weather"
