--- a/app/src/main/res/menu/menu_ticket.xml
+++ b/app/src/main/res/menu/menu_ticket.xml
@@ -2,12 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_sort"
+        android:title="Sort By"
+        app:showAsAction="always" />
 
-    <item android:id="@+id/action_search"
-        app:showAsAction="always"
-        android:title="Search"
-        android:icon="@android:drawable/ic_menu_search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        />
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_delete"
+        android:title="Delete All"
+        app:showAsAction="always" />
 
 </menu>
